--- a/Assets/index.html
+++ b/Assets/index.html
@@ -6,30 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justin Johnson: Web Developer</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact Info</a></li>
-                <li><a href="#">Resoursces</a></li>
-            </ul>
-        </nav>
+        <h1 class="header-title">Justin Johnson</h1>
+        <div class="header-line"></div> <!-- Black line under header -->
     </header>
     <main>
-        <div class="content-left"></div>
-        <h1>Digital</h1>
-        <h2>Marketing</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium recusandae, quasi itaque cum, tempore
-            debitis autem quaerat nulla quia, dolorem saepe. Fugiat magni quaerat laudantium.</p>
-        <button class="cta">Learn More</button>
-        <div class="content-right"></div>
+        <section id="work">
+            <h2>My Work</h2>
+            <!-- Placeholder for work content -->
+        </section>
+        <div class="center-line"></div> <!-- Black line down the middle of the page -->
+        <section id="links">
+            <div class="link-container">
+                <a href="#projects" class="link-item">
+                    <div class="link-title">Projects</div>
+                </a>
+                <a href="#resources" class="link-item">
+                    <div class="link-title">Resources</div>
+                </a>
+                <a href="#about" class="link-item">
+                    <div class="link-title">About</div>
+                </a>
+                <a href="#contact" class="link-item">
+                    <div class="link-title">Contact Info</div>
+                </a>
+            </div>
+        </section>
     </main>
-
 </body>
 
 </html>
